--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "type": "commonjs",
   "scripts": {
     "start": "node ./dist/main.js",
+	"lint": "eslint ./src/**",
+	"lint:fix": "eslint ./src/** --fix",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +20,13 @@
     "tslog": "^3.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.1.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   }
 }
