--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "commonjs",
   "scripts": {
     "start": "node ./dist/main.js",
-	"lint": "eslint ./src/**",
-	"lint:fix": "eslint ./src/** --fix",
+	"dev": "nodemon",
+    "lint": "eslint ./src/**",
+    "lint:fix": "eslint ./src/** --fix",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,7 +27,9 @@
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.1.0",
+    "nodemon": "^2.0.18",
     "prettier": "^2.7.1",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
 }
